--- a/SimpleWeather.Android/Resources/layout/activity_setup.xml
+++ b/SimpleWeather.Android/Resources/layout/activity_setup.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_setup"
     android:layout_width="match_parent"
@@ -32,6 +33,19 @@
                 android:src="@drawable/ic_logo" />
 
             <include layout="@layout/location_search_bar" />
+
+            <Button
+                android:id="@+id/gps_follow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:backgroundTint="@color/colorPrimaryLight"
+                android:drawableEnd="@drawable/ic_my_location_white_24dp"
+                android:drawablePadding="4dp"
+                android:padding="16dp"
+                android:text="@string/label_gpsfollow"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white" />
 
             <LinearLayout
                 android:id="@+id/api_region"
