--- a/SimpleWeather.UWP/SettingsPage.xaml
+++ b/SimpleWeather.UWP/SettingsPage.xaml
@@ -5,7 +5,8 @@
     xmlns:local="using:SimpleWeather.UWP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    d:DesignHeight="1000">
     <Page.Resources>
         <Style x:Key="SettingsPivotStyle" TargetType="Pivot">
             <Setter Property="Margin" Value="0" />
@@ -245,6 +246,25 @@
                     <TextBlock Text="Follow current location via GPS:" FontSize="18" Padding="10,5" />
                     <StackPanel Orientation="Horizontal" Padding="10,5">
                         <ToggleSwitch x:Name="FollowGPS" Toggled="FollowGPS_Toggled"/>
+                    </StackPanel>
+                    <TextBlock Text="Weather Provider" Style="{StaticResource SubheaderTextBlockStyle}" FontWeight="SemiLight" Padding="0,10" FontSize="24"/>
+                    <ComboBox x:Name="APIComboBox" Width="300" HorizontalAlignment="Left"
+                              PlaceholderText="Select Weather Provider">
+                        <ComboBox.Items>
+                            <TextBlock Text="WeatherUnderground"/>
+                            <TextBlock Text="Yahoo Weather"/>
+                        </ComboBox.Items>
+                    </ComboBox>
+                    <StackPanel x:Name="KeyPanel">
+                        <TextBlock Text="API Key" Padding="5"/>
+                        <Border x:Name="KeyBorder" BorderThickness="2" Background="White" BorderBrush="DarkGray"
+                            Width="300" HorizontalAlignment="Left" Padding="10,4"
+                            Visibility="{Binding ElementName=KeyEntry, Path=Visibility}">
+                            <TextBlock x:Name="KeyEntry"
+                             Visibility="Visible"
+                             Tapped="KeyEntry_Tapped" Text="API Key"
+                             GotFocus="KeyEntry_GotFocus" />
+                        </Border>
                     </StackPanel>
                 </StackPanel>
             </PivotItem>
